[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["angel-kishimoto"]

[tool.poetry.dependencies]
python = ">=3.6"
dearpygui = "*"

[tool.poetry.dev-dependencies]
isort = "*"
black = "*"
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.isort]
profile = "black"
force_to_top = "typing"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
