[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["angel-kishimoto"]

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
isort = "*"
pyproject-flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_to_top = "typing"
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
